--- a/.env.json
+++ b/.env.json
@@ -10,5 +10,6 @@
   "TWITCH_CLIENT_SECRET": "process.env.TWITCH_CLIENT_SECRET",
   "TWITCH_REFRESH_TOKEN": "process.env.TWITCH_REFRESH_TOKEN",
   "OPENAI_API_KEY": "process.env.OPENAI_API_KEY",
-  "KNUR_API_KEY": "process.env.KNUR_API_KEY"
+  "KNUR_API_KEY": "process.env.KNUR_API_KEY",
+  "YT_API_KEY": "process.env.YT_API_KEY"
 }
