--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "glob": "10.3.3",
-    "handlebars": "4.7.7",
+    "handlebars": "^4.7.7",
     "irc": "0.5.2",
     "memcached": "2.2.2",
     "mongoose": "7.4.5",
