--- a/.env.json
+++ b/.env.json
@@ -7,6 +7,8 @@
   "DISCORD_BOT_1100530513703358565": "process.env.DISCORD_BOT_1100530513703358565",
   "TWITCH_ACCESS_TOKEN": "process.env.TWITCH_ACCESS_TOKEN",
   "TWITCH_CLIENT_ID": "process.env.TWITCH_CLIENT_ID",
+  "TWITCH_BOT_REFRESH_TOKEN": "process.env.TWITCH_BOT_REFRESH_TOKEN",
+  "TWITCH_BOT_DISPLAY_NAME": "fvlvteBOT",
   "TWITCH_CLIENT_SECRET": "process.env.TWITCH_CLIENT_SECRET",
   "TWITCH_REFRESH_TOKEN": "process.env.TWITCH_REFRESH_TOKEN",
   "OPENAI_API_KEY": "process.env.OPENAI_API_KEY",
