Updated production signing/enc.

--- a/.env.json
+++ b/.env.json
@@ -13,5 +13,7 @@
   "TWITCH_REFRESH_TOKEN": "process.env.TWITCH_REFRESH_TOKEN",
   "OPENAI_API_KEY": "process.env.OPENAI_API_KEY",
   "KNUR_API_KEY": "process.env.KNUR_API_KEY",
+  "AUTH_TOKEN_ENC_KEY": "process.env.AUTH_TOKEN_ENC_KEY",
+  "AUTH_TOKEN_HMAC_KEY": "process.env.AUTH_TOKEN_HMAC_KEY",
   "YT_API_KEY": "process.env.YT_API_KEY"
 }
