--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "handlebars": "^4.7.7",
     "irc": "0.5.2",
     "memcached": "2.2.2",
+    "mongodb": "^6.3.0",
     "mongoose": "7.4.5",
     "node-telegram-bot-api": "0.61.0",
     "openai": "4.3.1",
