Refactored ExternalServer route handling and startup process.

--- a/.env.json
+++ b/.env.json
@@ -14,6 +14,7 @@
   "OPENAI_API_KEY": "process.env.OPENAI_API_KEY",
   "KNUR_API_KEY": "process.env.KNUR_API_KEY",
   "AUTH_TOKEN_ENC_KEY": "process.env.AUTH_TOKEN_ENC_KEY",
+  "SENTRY_ID_TOKEN": "process.env.SENTRY_ID_TOKEN",
   "AUTH_TOKEN_HMAC_KEY": "process.env.AUTH_TOKEN_HMAC_KEY",
   "YT_API_KEY": "process.env.YT_API_KEY"
 }
