--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint --ext .ts src --fix",
+    "start:test": "tsc && node dist/index.new.js",
     "lint:prod": "eslint --max-warnings 0 --ext .ts src",
-    "start": "tsc && node dist/index.local.js",
+    "start": "tsc && node dist/index.local.tmp.js",
     "burnEnv": "node cicdHelpers/burnEnv.js",
-    "start:dev": "nodemon --inspect --watch 'src' --exec 'npm run lint && NODE_ENV=development node --inspect -r ts-node/register src/index.local.ts'",
+    "start:dev": "nodemon --inspect --watch 'src' --exec 'npm run lint && NODE_ENV=development node --inspect -r ts-node/register src/index.local.tmp.ts'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
@@ -19,7 +20,8 @@
     "@discordjs/core": "0.6.0",
     "@distube/ytdl-core": "^4.13.3",
     "@google-cloud/text-to-speech": "^5.0.0",
-    "@sentry/node": "7.60.0",
+    "@sentry/node": "^7.60.0",
+    "@sentry/profiling-node": "^7.100.1",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
     "express": "4.18.2",
@@ -38,7 +40,7 @@
     "sqlite3": "5.1.6",
     "tmi.js": "1.8.5",
     "twitch-js": "^2.0.0-beta.45",
-    "winston": "3.10.0",
+    "winston": "^3.10.0",
     "ws": "8.13.0",
     "ytdl-core": "^4.11.5"
   },
