Added Mongo DB config.

--- a/.env.json
+++ b/.env.json
@@ -8,6 +8,7 @@
   "TWITCH_ACCESS_TOKEN": "process.env.TWITCH_ACCESS_TOKEN",
   "TWITCH_CLIENT_ID": "process.env.TWITCH_CLIENT_ID",
   "TWITCH_BOT_REFRESH_TOKEN": "process.env.TWITCH_BOT_REFRESH_TOKEN",
+  "MONGODB_CS": "process.env.MONGODB_CS",
   "TWITCH_BOT_DISPLAY_NAME": "fvlvteBOT",
   "TWITCH_CLIENT_SECRET": "process.env.TWITCH_CLIENT_SECRET",
   "TWITCH_REFRESH_TOKEN": "process.env.TWITCH_REFRESH_TOKEN",
