--- a/.github/workflows/buildAndDelpyToContainerRegistry.yml
+++ b/.github/workflows/buildAndDelpyToContainerRegistry.yml
@@ -15,5 +15,5 @@ jobs:
         id: build-image
         run: |
           docker login -u fvlvte -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -q -t fvlvte/knurobot:latest .
+          docker build --build-arg="BUILD_SHA=${{ github.sha }}" --build-arg="BUILD_TS=$(date +'%Y-%m-%dT%H:%M:%S')" -q -t fvlvte/knurobot:latest .
           docker push fvlvte/knurobot:latest
