Fixed time stamp source.

--- a/.github/workflows/buildAndDelpyToContainerRegistry.yml
+++ b/.github/workflows/buildAndDelpyToContainerRegistry.yml
@@ -15,5 +15,5 @@ jobs:
         id: build-image
         run: |
           docker login -u fvlvte -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build --build-arg="BUILD_TS_ARG=${{ github.event.repository.updated_at }}" -q -t fvlvte/knurobot:latest .
+          docker build --build-arg="BUILD_TS_ARG=${{ github.event.repository.pushed_at }}" -q -t fvlvte/knurobot:latest .
           docker push fvlvte/knurobot:latest
