--- a/package.json
+++ b/package.json
@@ -6,65 +6,39 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint --ext .ts src --fix",
-    "start:test": "tsc && node dist/index.new.js",
+    "start:test": "tsc && node dist/main.js",
     "lint:prod": "eslint --max-warnings 0 --ext .ts src",
-    "start": "tsc && node dist/index.new.js",
-    "burnEnv": "node cicdHelpers/burnEnv.js",
-    "start:dev": "nodemon --inspect --watch 'src' --exec 'npm run lint && NODE_ENV=development node --inspect -r ts-node/register src/index.local.tmp.ts'",
+    "start": "tsc && node dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Kacper 'fvlvte' Fałat",
+  "license": "MIT",
   "dependencies": {
-    "@discordjs/core": "0.6.0",
-    "@distube/ytdl-core": "^4.13.3",
-    "@google-cloud/text-to-speech": "^5.0.0",
-    "@sentry/node": "^7.60.0",
-    "@sentry/profiling-node": "^7.100.1",
+    "@discordjs/core": "1.1.1",
+    "@distube/ytdl-core": "4.13.3",
+    "@google-cloud/text-to-speech": "5.1.0",
+    "axios": "1.6.7",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
     "express": "4.18.2",
-    "glob": "10.3.3",
-    "handlebars": "^4.7.7",
-    "irc": "0.5.2",
-    "memcached": "2.2.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "7.4.5",
-    "node-telegram-bot-api": "0.61.0",
-    "openai": "4.3.1",
-    "pako": "2.1.0",
-    "pg": "8.11.1",
-    "puppeteer": "20.9.0",
-    "reflect-metadata": "^0.1.13",
-    "sqlite3": "5.1.6",
-    "tmi.js": "1.8.5",
+    "handlebars": "4.7.8",
+    "mongodb": "6.3.0",
+    "openai": "4.28.0",
     "twitch-js": "2.0.0-beta.45",
-    "winston": "^3.10.0",
-    "ws": "8.13.0",
-    "ytdl-core": "^4.11.5"
+    "winston": "3.11.0",
+    "ws": "8.16.0"
   },
   "devDependencies": {
-    "@tsconfig/node20": "20.1.0",
-    "@types/axios": "0.14.0",
-    "@types/cors": "2.8.13",
-    "@types/express": "4.17.17",
-    "@types/glob": "8.1.0",
-    "@types/memcached": "^2.2.7",
-    "@types/node": "20.4.5",
-    "@types/node-telegram-bot-api": "0.61.6",
-    "@types/pako": "2.0.0",
-    "@types/pg": "8.10.2",
-    "@types/tough-cookie": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "6.2.0",
-    "chai": "4.3.7",
-    "eslint": "8.45.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "husky": "8.0.3",
-    "mocha": "10.2.0",
-    "nodemon": "3.0.1",
-    "prettier": "3.0.0",
-    "ts-node": "10.9.1",
-    "typescript": "5.1.6"
+    "@tsconfig/node20": "20.1.2",
+    "@types/cors": "2.8.17",
+    "@types/express": "4.17.21",
+    "@types/node": "20.11.19",
+    "@typescript-eslint/eslint-plugin": "7.0.1",
+    "eslint": "8.56.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "husky": "9.0.11",
+    "prettier": "3.2.5",
+    "typescript": "5.3.3"
   }
 }
