--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:test": "tsc && node dist/main.js",
     "lint:prod": "eslint --max-warnings 0 --ext .ts src",
     "start": "tsc && node dist/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "author": "Kacper 'fvlvte' Fałat",
@@ -33,6 +33,7 @@
     "@tsconfig/node20": "20.1.2",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.11.19",
     "@typescript-eslint/eslint-plugin": "7.0.1",
     "eslint": "8.56.0",
@@ -40,6 +41,7 @@
     "husky": "9.0.11",
     "jest": "^29.7.0",
     "prettier": "3.2.5",
+    "ts-jest": "^29.1.2",
     "typescript": "5.3.3"
   }
 }
