--- a/.github/workflows/deployProduction.yml
+++ b/.github/workflows/deployProduction.yml
@@ -16,10 +16,10 @@ jobs:
         run: |
           npm ci
           npm run test
+          npm run build
       - name: Login, build, tag, and push image to Docker Container Registry
         id: build-image
         run: |
           docker login -u fvlvte -p ${{ secrets.DOCKER_PASSWORD }}
           docker build --build-arg="BUILD_TS_ARG=${{ github.event.repository.pushed_at }}" -q -t fvlvte/knurobot:latest .
           docker push fvlvte/knurobot:latest
-          
