--- a/package.json
+++ b/package.json
@@ -30,19 +30,19 @@
     "ws": "8.16.0"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^4.2.0",
+    "@shelf/jest-mongodb": "4.2.0",
     "@tsconfig/node20": "20.1.2",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "20.11.19",
-    "@typescript-eslint/eslint-plugin": "7.0.1",
-    "eslint": "8.56.0",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.11.20",
+    "@typescript-eslint/eslint-plugin": "7.1.0",
+    "eslint": "8.57.0",
     "eslint-plugin-prettier": "5.1.3",
     "husky": "9.0.11",
-    "jest": "^29.7.0",
+    "jest": "29.7.0",
     "prettier": "3.2.5",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "29.1.2",
     "typescript": "5.3.3"
   }
 }
