--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "lint": "eslint --ext .ts src --fix",
     "start:test": "tsc && node dist/main.js",
+    "start:dbg": "node ./src/main.ts",
     "lint:prod": "eslint --max-warnings 0 --ext .ts src",
     "start": "tsc && node dist/main.js",
     "test": "jest",
@@ -43,6 +44,7 @@
     "jest": "29.7.0",
     "prettier": "3.2.5",
     "ts-jest": "29.1.2",
+    "ts-node": "10.9.2",
     "typescript": "5.3.3"
   }
 }
